refactor(backend): blindaje de seguridad Spring Security 6, FileStorageService, DTOs, suite de pruebas y documentacion integral